# clawsquire

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/clawsquire-core/: Cargo.toml
crates/clawsquire-serve/: Cargo.toml
crates/clawsquire-serve/src/: dispatch.rs  main.rs  server.rs
crates/clawsquire-serve/tests/: e2e_protocol.rs
e2e-tests/: package-lock.json  package.json  wdio.conf.js
scripts/: check-i18n.sh  clawsquire_e2e_remote.sh  copy-sidecar.sh  install-remote.sh
src/: App.tsx  constants.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: active_target.rs  backup.rs  cli_runner.rs  community_search.rs  compat.rs  constants.rs  detect.rs  doctor.rs  instances.rs  lib.rs  main.rs  node_install.rs  openclaw.rs  protocol_runner.rs  remote.rs  secure_store.rs  sidecar.rs  ssh.rs  ssh_tunnel.rs  util.rs
src/components/: AgentChat.tsx  AgentInstaller.tsx  ErrorBoundary.tsx
src/context/: ActiveTargetContext.tsx  OperationContext.tsx
src/i18n/: de.json  en.json  es.json  index.ts  ja.json  pt-BR.json  zh-CN.json  zh-TW.json
src/lib/: useTheme.ts  useWindowTitle.ts
src/pages/: ApiKeySetup.tsx  Automations.test.tsx  Automations.tsx  Backup.test.tsx  Backup.tsx  Bootstrap.test.tsx  Bootstrap.tsx  Channels.test.tsx  Channels.tsx  Help.tsx  (+22 more)
(+44 files in other folders)
